ome sans-Sam editing (shift green to comment); fixed graphic; camelcase

--- a/SDL_HapticPeriodic.mediawiki
+++ b/SDL_HapticPeriodic.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 '''DRAFT'''
 
 = SDL_HapticPeriodic =
@@ -14,11 +14,11 @@ A structure that contains a template for a periodic effect.
 |-
 |Uint16
 |'''type'''
-|^the shape of the waves^ ,,one of the effects handled by this structure,,; see [[#type|Remarks]] for details
+|the shape of the waves; <!-- one of the effects handled by this structure --> see [[#type|Remarks]] for details
 |-
 |[[SDL_HapticDirection]]
 |'''direction'''
-|direction of the effect ^(relative to the user)^
+|direction of the effect (relative to the user)
 |-
 |
 |
@@ -26,11 +26,11 @@ A structure that contains a template for a periodic effect.
 |-
 |Uint32
 |'''length'''
-|duration of the effect ^(is this the same as # of cycles? always in ms?)^
+|duration of the effect <!-- (is this the same as # of cycles? always in ms?) --> 
 |-
 |Uint16
 |'''delay'''
-|delay before starting the effect ^(ms?)^
+|delay before starting the effect <!-- (ms?) --> 
 |-
 |
 |
@@ -42,7 +42,7 @@ A structure that contains a template for a periodic effect.
 |-
 |Uint16
 |'''interval'''
-|how soon it can be triggered again after '''button''' ^(delay between individual waves or before the effect can be used again?)^ ^(ms?)^
+|how soon it can be triggered again after '''button''' <!-- (ms?) (delay between individual waves or before the effect can be used again?) --> 
 |-
 |
 |
@@ -50,19 +50,19 @@ A structure that contains a template for a periodic effect.
 |-
 |Uint16
 |'''period'''
-|period of the wave ^(like frequency, duration from start to start?)^ ^(ms?)^
+|period of the wave <!-- (ms?) (like frequency, duration from start to start?) --> 
 |-
 |Sint16
 |'''magnitude'''
-|peak value ^(like amplitude?)^ ^(units?)^
+|peak value <!-- (units?) (like amplitude?) --> 
 |-
 |Sint16
 |'''offset'''
-|mean value of the wave ^(what aspect of the wave is being offset from what other marker? Is this the distance between waves?)^
+|mean value of the wave <!-- (what aspect of the wave is being offset from what other marker? Is this the distance between waves?) --> 
 |-
 |Uint16
 |'''phase'''
-|horizontal shift given by ''hundredths'' of a cycle; see [[#phase|Remarks]] for details ^(what is being shifted? Is this what creates the flat tops? What is the definition of a cycle, 1 sec?)^
+|horizontal shift given by hundredths of a cycle; see [[#phase|Remarks]] for details <!-- (what is being shifted? Is this what creates the flat tops? What is the definition of a cycle, 1 sec?) --> 
 |-
 |
 |
@@ -70,19 +70,19 @@ A structure that contains a template for a periodic effect.
 |-
 |Uint16
 |'''attack_length'''
-|duration of the attack ^(ms?)^
+|duration of the attack <!-- (ms?) --> 
 |-
 |Uint16
 |'''attack_level'''
-|level at the start of the attack ^(units?)^
+|level at the start of the attack <!-- (units?) --> 
 |-
 |Uint16
 |'''fade_length'''
-|duration of the fade ^(ms?)^
+|duration of the fade <!-- (ms?) --> 
 |-
 |Uint16
 |'''fade_level'''
-|level at the end of the fade ^(units?)^
+|level at the end of the fade <!-- (units?) --> 
 |}
 
 == Code Examples ==
@@ -91,8 +91,10 @@ You can add your code example here
 ```
 
 == Remarks ==
-<<Color2(green,There are several typing and grammatical errors in this section of the header. May not require fixing but probably should at least be looked at. Changes from header indicated in italics below.)>>
-<span id="type"></span>A periodic effect consists ''of'' a wave-shaped effect that repeats itself over time. The type determines the shape of the wave and the ^other^ parameters determine the dimensions of the wave. 
+<!-- There are several typing and grammatical errors in this section of the header. May not require fixing but probably should at least be looked at. Changes from header have been made below. -->
+
+<span id="type"></span>
+A periodic effect consists of a wave-shaped effect that repeats itself over time. The type determines the shape of the wave and the other parameters determine the dimensions of the wave. 
 ```
 button         period
 press          |     |
@@ -108,51 +110,27 @@ press          |     |
 ===================================================
                       interval
 ```
-<<Color2(green,Does this structure warrant a simple .bmp diagram? Something that can use colors and such?)>>
+<!-- Does this structure warrant a simple .bmp diagram? Something that can use colors and such? -->
 
 '''type''' may be one of the following:
 {|
 |SDL_HAPTIC_SINE
+|<code>  __      __      __      __</code><br/><code> /  \    /  \    /  \    /</code><br/><code>/    \__/    \__/    \__/</code>
 |-
 |SDL_HAPTIC_SQUARE
+|<code> __    __    __    __    __</code><br/><code>|  |  |  |  |  |  |  |  |  |</code><br/><code>|  |__|  |__|  |__|  |__|  |</code>
 |-
 |SDL_HAPTIC_TRIANGLE
+|<code>  /\    /\    /\    /\    /\</code><br/><code> /  \  /  \  /  \  /  \  /</code><br/><code>/    \/    \/    \/    \/</code>
 |-
 |SDL_HAPTIC_SAWTOOTHUP
+|<code>  /|  /|  /|  /|  /|  /|  /|</code><br/><code> / | / | / | / | / | / | / |</code><br/><code>/  |/  |/  |/  |/  |/  |/  |</code>
 |-
 |SDL_HAPTIC_SAWTOOTHDOWN
+|<code>\  |\  |\  |\  |\  |\  |\  |</code><br/><code> \ | \ | \ | \ | \ | \ | \ |</code><br/><code>  \|  \|  \|  \|  \|  \|  \| </code>
 |}
 
-* Examples:
- ```
-SDL_HAPTIC_SINE
-  __      __      __      __
- /  \    /  \    /  \    /
-/    \__/    \__/    \__/
-
-SDL_HAPTIC_SQUARE
- __    __    __    __    __
-|  |  |  |  |  |  |  |  |  |
-|  |__|  |__|  |__|  |__|  |
-
-SDL_HAPTIC_TRIANGLE
-  /\    /\    /\    /\    /\
- /  \  /  \  /  \  /  \  /
-/    \/    \/    \/    \/
-
-SDL_HAPTIC_SAWTOOTHUP
-  /|  /|  /|  /|  /|  /|  /|
- / | / | / | / | / | / | / |
-/  |/  |/  |/  |/  |/  |/  |
-
-SDL_HAPTIC_SAWTOOTHDOWN
-\  |\  |\  |\  |\  |\  |\  |
- \ | \ | \ | \ | \ | \ | \ |
-  \|  \|  \|  \|  \|  \|  \| 
-```
-<<Color2(green,For some reason when these are interpreted in the code box the angle of the slashes is changed and they look funny.  Don't know how to fix that unless there is a way to change font or if we use an actual image.)>>
-
-<span id="phase"></span>'''phase''' is given by ''hundredths'' of a ''cycle,'' meaning that giving the phase a value of 9000 will displace it 25% of it's period. Here are sample values:
+<span id="phase"></span>'''phase''' is given by hundredths of a cycle, meaning that giving the phase a value of 9000 will displace it 25% of it's period. Here are sample values:
 {|
 |0
 |No phase displacement
@@ -167,14 +145,14 @@ SDL_HAPTIC_SAWTOOTHDOWN
 |Displaced 75% of it's period
 |-
 |36000
-|Displaced 100% of it's period, same as 0, but 0 is ''preferred''
+|Displaced 100% of it's period, same as 0, but 0 is preferred
 |}
-<<Color2(green,This is not at all clear unless it is a common thing that a programmer would know.  Is phase describing the duration of an individual wave from start to finish or the duration from the start of one wave to the start of the next?
+<!-- This is not at all clear unless it is a common thing that a programmer would know.  Is phase describing the duration of an individual wave from start to finish or the duration from the start of one wave to the start of the next? -->
 
 == Related Structures ==
 :[[SDL_HapticDirection]]
 
-== Related Functions ==
+<!-- #== Related Functions == -->
 
 ----
 [[CategoryStruct]], [[CategoryForceFeedback]]
