--- a/SDL_HapticEffect.mediawiki
+++ b/SDL_HapticEffect.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 '''DRAFT'''
 
 = SDL_HapticEffect =
@@ -10,7 +10,7 @@ A union that contains the generic template for any haptic effect.
 {|
 |Uint16
 |'''type'''
-|effect type
+|effect type; see [[SDL_HapticPeriodic]] for details???
 |-
 |[[SDL_HapticConstant]]
 |'''constant'''
@@ -39,7 +39,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-^All structs in this union contain the following^ common parts:
+All structures in this union contain the following common parts:
 
 {|
 |
@@ -87,17 +87,19 @@ You can add your code example here
 |level at the end of the fade
 |}
 
-All values max at 32767 (0x7FFF).  Signed values ,,also,, can be negative.  Time values, unless specified otherwise, are in milliseconds.
+All values max at 32767 (0x7FFF).  Signed values can be negative.  Time values, unless specified otherwise, are in milliseconds.
 
-You can ,,also,, pass SDL_HAPTIC_INFINITY to '''length''' instead of a 0-32767 value.  Neither '''delay''', '''interval''', '''attack_length''' nor '''fade_length''' support SDL_HAPTIC_INFINITY.  Fade will also not be used since effect never ends.  <<Color2(green,That last sentence about Fade is awkward and potentially confusing for a novice user.  How could it be rewritten to be more clear?)>>
+You can pass SDL_HAPTIC_INFINITY to '''length''' instead of a 0-32767 value.  Neither '''delay''', '''interval''', '''attack_length''', nor '''fade_length''' support SDL_HAPTIC_INFINITY.  Fade will also not be used since effect never ends.
+The SDL_HAPTIC_RAMP effect does not support a duration of SDL_HAPTIC_INFINITY.
 
-,,Additionally, ,,the SDL_HAPTIC_RAMP effect does not support a duration of SDL_HAPTIC_INFINITY.  <<Color2(green,Should this sentence be joined to the paragraph above?)>>
+<!-- The last sentence from line 698 version f3c34d321289 SDL_haptic.h is awkward and potentially confusing.  How could it be revised to make it more clear? --> 
 
-Button triggers may not be supported on all devices; it is advised not to use them if possible.  Buttons start at index 1 instead of index 0 like the,,y,, joystick.  <<Color2(green,Does this mean that the joystick itself is index 0 and the buttons are index >=1?)>>
+Button triggers may not be supported on all devices.  It is advised not to use them if possible.  Buttons start at index 1 instead of index 0 like the joystick.  
+<!-- Does this mean that the joystick itself is index 0 and the buttons are index >=1? -->
 
-If both '''attack_length''' and '''fade_level''' are 0, the '''envelope''' is not used, otherwise both values are used.
+If both '''attack_length''' and '''fade_level''' are 0 the '''envelope''' is not used, otherwise both values are used.
 
-Here ,,we have,, ^is^ an example of a constant effect evolution in time:
+Here is an example of a constant effect evolution in time:
 ```
 Strength
 ^
@@ -119,15 +121,15 @@ Strength
        delay                 length
 ```
 
-Note ^that^ either the '''attack_level''' or the '''fade_level''' may be above the actual effect level.
+Note that either the '''attack_level''' or the '''fade_level''' may be above the actual effect level.
 
-<<Color2(green,Note that some minor edits to the verbatim text in the header have been made and not noted above.)>>
+<!-- Note that some minor edits to the verbatim text in the header have been made and not noted above. -->
 
 == Related Structures ==
 :[[SDL_HapticCondition]]
 :[[SDL_HapticConstant]]
 :[[SDL_HapticCustom]]
-:[[SDL_HapticDirection]] ??? (from header but not referenced in the union)
+:[[SDL_HapticDirection]] ??? <!-- (from header but not referenced in the union) -->
 :[[SDL_HapticPeriodic]]
 :[[SDL_HapticRamp]]
 
