--- a/SDL_HapticEffect.mediawiki
+++ b/SDL_HapticEffect.mediawiki
@@ -89,10 +89,11 @@ All structures in this union contain the following common parts:
 
 All values max at 32767 (0x7FFF).  Signed values can be negative.  Time values, unless specified otherwise, are in milliseconds.
 
-You can pass SDL_HAPTIC_INFINITY to '''length''' instead of a 0-32767 value.  Neither '''delay''', '''interval''', '''attack_length''', nor '''fade_length''' support SDL_HAPTIC_INFINITY.  Fade will also not be used since effect never ends.
-The SDL_HAPTIC_RAMP effect does not support a duration of SDL_HAPTIC_INFINITY.
+You can pass SDL_HAPTIC_INFINITY to '''length''' instead of a 0-32767 value.  Neither '''delay''', '''interval''', '''attack_length''', nor '''fade_length''' support SDL_HAPTIC_INFINITY.
+The SDL_HAPTIC_RAMP effect does not support a duration of SDL_HAPTIC_INFINITY.  
+Fade will also not be used since effect never ends.
 
-<!-- The last sentence from line 698 version f3c34d321289 SDL_haptic.h is awkward and potentially confusing.  How could it be revised to make it more clear? --> 
+<!-- Ramp sentence combined into this paragraph, separate in header.  The last sentence about Fade (from line 698 version f3c34d321289 SDL_haptic.h) is awkward and potentially confusing.  How could it be revised to make it more clear? --> 
 
 Button triggers may not be supported on all devices.  It is advised not to use them if possible.  Buttons start at index 1 instead of index 0 like the joystick.  
 <!-- Does this mean that the joystick itself is index 0 and the buttons are index >=1? -->
