--- a/SGTutorials.mediawiki
+++ b/SGTutorials.mediawiki
@@ -4,21 +4,26 @@
 
 = Style Guide: Tutorials =
 
-The [http://wiki.libsdl.org/moin.cgi/Tutorials Tutorials] page provides links to many different resources for help with using SDL.  This guide provides instructions for adding your tutorial to the Tutorials page. 
+The [[Tutorials|Tutorials]] page provides links to many different resources for help with using SDL.  This guide provides instructions for adding your tutorial to the Tutorials page. 
+
+'''Tutorials should provide basic instruction regarding the use and application of some aspect of SDL (specific to v1.3 in this wiki).  Tutorials may cover as little as a single function or as much as whole conceptual topics (ie: audio, video, etc.).'''
 
 <span id="ToC"></span>
 
 == General Guidelines ==
 ''Most tutorials on the Tutorials page are external resources.  This guide will help you add an external tutorial to the list.<br/>If you do not have an outside location for your tutorial, this guide also details how to create a tutorial from within the wiki and add it to the list when it is ready.''
 
-'''Please post appropriate tutorials that may benefit other users.  
-* Do not post anything that you do not have permission to post publicly.'''
+'''Please post appropriate tutorials that may benefit other users.'''
+* Do not post anything that you do not have permission to post publicly.
+* Please remember to keep it accurate, simple, and easy to understand.
+
+~-[[#ToC|Return to Table of Contents]]-~
 <br/>
 <span id="existing"></span>
 == Adding An Existing Tutorial ==
 ''The following instructions apply if you have already created your tutorial.  If you still need to create your tutorial see ''[[#creating|Creating A New Tutorial]]'' below first and then return here.''
 
- 1. Begin by going to the [http://wiki.libsdl.org/moin.cgi/Tutorials Tutorials] page and selecting <<Color2(blue,Edit (Text))>> or <<Color2(blue,Edit (GUI))>> in the left column to begin editing.
+ 1. Begin by going to the [[Tutorials|Tutorials]] page and selecting <<Color2(blue,Edit (Text))>> or <<Color2(blue,Edit (GUI))>> in the left column to begin editing.
   ~-Reminder: Markup info provided here is specifically for use in the Text editor but should work in both.-~
 
  1. Scroll down in the edit window to the section that best fits your tutorial (eg: ```== Video ==```, {{{== Audio ==}}}, etc.).<br/> See [[#heading|Creating A New Heading]] if one does not exist.
@@ -29,8 +34,9 @@ The [http://wiki.libsdl.org/moin.cgi/Tutorials Tutorials] page provides links to
 
  1. When you are satisfied with your content and have filled in the Comment field under the editing box, save your work by clicking <<Color2(blue,Save Changes)>> in the left column.
 
-For additional assistance with editing, saving, or wiki-appropriate markup see the [http://wiki.libsdl.org/moin.cgi/SGWikiBasics Wiki Basics] Style Guide.
-<br/>
+For additional assistance with editing, saving, or wiki-appropriate markup see the [[SGWikiBasics|Wiki Basics]] Style Guide.
+
+~-[[#ToC|Return to Table of Contents]]-~
 <br/>
 <br/>
 <span id="formatting"></span>
@@ -68,8 +74,9 @@ The total addition should appear as follows (existing header shown to illustrate
  * [[http://your.tutorial.html|Using Audio in SDL]]
   . This tutorial discusses how to set up audio playback using SDL 1.3.
 ```
- ''Example'': See other entries on the [http://wiki.libsdl.org/moin.cgi/Tutorials Tutorials] page for examples.
+ ''Example'': See other entries on the [[Tutorials|Tutorials]] page for examples.
 
+~-[[#ToC|Return to Table of Contents]]-~
 
 <span id="heading"></span>
 === Creating A New Heading ===
@@ -77,7 +84,7 @@ The total addition should appear as follows (existing header shown to illustrate
 
 Assuming your tutorial does not fit into any of the existing headings: 
 : ''Action'': Create a new heading for it.
-: The headings should roughly match those found on the [http://wiki.libsdl.org/moin.cgi/APIByCategory API by Category] page.  
+: The headings should roughly match those found on the [[APIByCategory|API by Category]] page.  
 
 : ''Markup'': Place the following markup at the location for the new heading.
   ```== Heading ==```
@@ -85,7 +92,8 @@ Assuming your tutorial does not fit into any of the existing headings:
 : It is preferable to have a blank space above and below a heading.
 
 Return to [[#existing|Adding An Existing Tutorial]] to complete the process.
-<br/>
+
+~-[[#ToC|Return to Table of Contents]]-~
 <br/>
 <br/>
 <span id="creating"></span>
@@ -99,11 +107,12 @@ http://wiki.libsdl.org/moin.cgi/PageName
 ```
 : ~-Note: There are several ways to create a new page address.  You may choose another if you prefer.-~
 
- ''Note'': The convention in this wiki is that the name of the page is also the address of the page and that Camel<code></code>Case is preferable to blank spaces.
+ ''Note'': The convention in this wiki is that the name of the page is also the address of the page and that CamelCase is preferable to blank spaces.  Page addresses are case-sensitive.
 
- ''Example'': The address for the page [[SDL_BuildAudioCVT]]() is<br/>```http://wiki.libsdl.org/moin.cgi/SDL_BuildAudioCVT```
+ ''Example'': The address for the page [[SDL_BuildAudioCVT]]() is
+: ```http://wiki.libsdl.org/moin.cgi/SDL_BuildAudioCVT```
 
- <<Color2(red,''Important!'')>> Page addresses are case-sensitive. Be careful to name and spell accurately when creating a new page!
+ <<Color2(red,''Important!'')>> Be careful to name and spell accurately when creating a new page!  You cannot delete a page or edit a page name after the page is created and saved. 
  ||<( |2 30%>''If'' you discover a typo in the address __prior to saving the page__||''Action'': Copy all of your contents, cancel or close the page, and start over.<br/>Paste your contents into the new page and continue editing.||
  ||''Note'': Your old page and address will not be saved.||
  ||<( |2>''If'' you discover a typo in the address __after you saved the page__||''Action'': Send a message via ''Feedback'' or to <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>> requesting a correction.||
@@ -122,7 +131,7 @@ http://wiki.libsdl.org/moin.cgi/PageName
 
  1.#3 ''Action'': Create your tutorial!<br/>Your tutorial page may have any formatting you feel suits the contents best. It is preferred that the general appearance remain consistent (or at least compatible) with the rest of the wiki as much as possible.
 
- ''Note'': For information on markup see [http://wiki.libsdl.org/moin.cgi/SGWikiBasics]
+ ''Note'': For information on markup see [[SGWikiBasics]]
 
 <!-- # ''Markup'':  Many, but not all, of the SDL wiki pages begin with the following markup.  You may want to dupl -->
 <!-- #  ``` -->
