--- a/SGWikiBasics.mediawiki
+++ b/SGWikiBasics.mediawiki
@@ -47,7 +47,8 @@ Before you save your changes please include a note in the Comment field below th
 * added code example to C++ section
 * remarked on use of function with [sound card model]
 
-{i} Especially when using the text editor, use the <<Color2(blue,Preview)>> function in the left sidebar before saving your changes to ensure that the markup you have included is producing the desired result as well as to scan for errors in a different view.
+{i} Especially when using the text editor, use the <<Color2(blue,Preview)>> function in the left sidebar often and before saving your changes to ensure that the markup you have included is producing the desired result as well as to scan for errors in a different view.
+: ~-(Keep in mind that a few things (like [[SGWikiBasics#color2|Color2 text]]) don't preview exactly as they parse.)-~
 
 When you have finished adding your content and filling in the Comment field, and are satisfied with the formatting, use the <<Color2(blue,Save Changes)>> function in the left sidebar to save your changes.
 
