--- a/SGCodeExamples.mediawiki
+++ b/SGCodeExamples.mediawiki
@@ -22,7 +22,8 @@ All [[SGWikiBasics#api|API pages]] in this wiki contain a section for code examp
   {i} ~-Markup info provided here is specifically for use in the Text editor but should work in both.-~
  1. Scroll down in the edit window to the section that begins with ```== Code Examples ==```.  Add your content below this heading following the conventions in this style guide.
  1. Find information relevant to your content in the style guide sections [[#formatting|below]] and apply the appropriate formatting as you create your content.
- 1. Preview your work as you go by clicking <<Color2(blue,Preview)>> in the left column.  
+ 1. Preview your work as you go by clicking <<Color2(blue,Preview)>> in the left column.  Preview often and any time you are unsure of formatting. 
+: ~-(Keep in mind that a few things (like [[SGWikiBasics#color2|Color2 text]]) don't preview exactly as they parse.)-~
  1. Save your work by clicking <<Color2(blue,Save Changes)>> in the left column after you are satisfied with your content and have filled in the Comment field under the editing box. 
 For additional assistance with editing, saving, or wiki-appropriate markup see the [[SGWikiBasics|Wiki Basics]] Style Guide.
 
